--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-gamepad": "SBRK/react-gamepad",
+    "react-modal": "^3.11.2",
     "react-scripts": "3.3.0",
     "react-transition-group": "^4.3.0",
     "rxjs": "^6.5.4"
