--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-gamepad": "SBRK/react-gamepad",
     "react-modal": "^3.11.2",
     "react-scripts": "3.3.0",
+    "react-spring": "^8.0.27",
     "react-three-fiber": "^4.2.8",
     "react-transition-group": "^4.3.0",
     "rxjs": "^6.5.4",
