--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "animejs": "^3.1.0",
     "antd": "^3.26.7",
     "react": "^16.12.0",
+    "react-canvas": "^1.3.0",
     "react-dom": "^16.12.0",
     "react-gamepad": "SBRK/react-gamepad",
     "react-modal": "^3.11.2",
